@@ -17,6 +17,10 @@ dependencies {
     testImplementation 'org.jboss:jboss-vfs:3.2.6.Final'
 }
 
+tasks.withType(Test).configureEach {
+    jvmArgs += ["--add-opens=java.base/java.io=ALL-UNNAMED"]
+}
+
 graalvmNative {
     agent {
         defaultMode = "conditional"
@@ -24,6 +28,11 @@ graalvmNative {
             conditional {
                 userCodeFilterPath = "user-code-filter.json"
             }
+        }
+    }
+    binaries {
+        all {
+            buildArgs.addAll(["--add-opens=java.base/java.io=ALL-UNNAMED"])
         }
     }
 }
